# FHE-Math-For-DL

./: CMakeLists.txt  README.md  execute.sh  fhe_act.hpp  main.cc  mlp.cc  mlp.hpp  person.json
.cache/clangd/index/: fhe_act.cc.D0810EE5736BC450.idx  fhe_act.hpp.067465AA089653AE.idx  fhe_act.hpp.58ABFD5C02B52CB0.idx  fhe_act.hpp.C5F9CF3BE8DC817E.idx  iris_demo.cc.41B6A894CC3E7C4E.idx  main.cc.AF6F993139A96A3A.idx  main.cc.DA16C89558645741.idx  mlp.cc.553DF219E7E9FB08.idx  mlp.cc.FD3AAE1451B52AFB.idx  mlp.cc.FF7A56BB9755F5FA.idx  mlp.hpp.5F98532164C88E0B.idx  mlp.hpp.7309FC7C7EDC8340.idx  mlp.hpp.7A9DD8D69ACC619D.idx
cmake/: fhe_math_dlConfig.cmake.in
examples/: iris_demo.cc
include/fhe_math_dl/: fhe_act.hpp  mlp.hpp
src/: mlp.cc
